# dp-meetdata

./: .copier-answers.yml  .cruft.json  .env  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.adoc  README.md  config.public.mk  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
AccumulationKind/: index.html
AggregateKind/: index.html
Asset/: index.html
AssetContainer/: index.html
BaseReading/: index.html
Boolean/: index.html
CommodityKind/: index.html
Curie/: index.html
Currency/: index.html
Customer/: index.html
CustomerKind/: index.html
Date/: index.html
DateOrDatetime/: index.html
DateTimeInterval/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
EndDevice/: index.html
Float/: index.html
FlowDirectionKind/: index.html
IOPoint/: index.html
IdentifiedObject/: index.html
Integer/: index.html
IntervalBlock/: index.html
IntervalReading/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
MacroPeriodKind/: index.html
MarketEvaluationPoint/: index.html
MeasurementKind/: index.html
MeasurementValue/: index.html
MeasuringPeriodKind/: index.html
MeetdataDataproduct/: index.html
Meter/: index.html
MeterReading/: index.html
MeterReadingDataSet/: index.html
Name/: index.html
NameType/: index.html
NameTypeAuthority/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
OrganisationRole/: index.html
PhaseCode/: index.html
RationalNumber/: index.html
ReadingInterharmonic/: index.html
Sparqlpath/: index.html
(+185 files in other folders)
