[tool.poetry]
name = "dp_meetdata"
version = "0.1.0"
description = "Information model for the 'meetdata' data product."
authors = ["Ritger Teunissen <ritger.teunissen@alliander.com>", "Bart Kleijngeld <bart.kleijngeld@alliander.com>"]
license = "Apache Software License 2.0"
readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
linkml-runtime = "^1.1.24"
linkml-asciidoc-generator = { git = "https://github.com/Netbeheer-Nederland/linkml-antora-generator.git", tag = "v0.2" }

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
